--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/lodash.debounce": "^4.0.9",
     "@types/mapbox__polyline": "^1.0.5",
     "axios": "^1.8.3",
+    "dotenv": "^16.5.0",
     "expo": "~52.0.37",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.7",
@@ -54,7 +55,6 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2",
     "react-native": "0.76.7",
-    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-maps": "1.18.0",
